--- a/app/src/main/res/drawable/view_bg.xml
+++ b/app/src/main/res/drawable/view_bg.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <size android:width="1000dp" android:height="0.5dp" />
-    <solid
-        android:color="#EE1760"/>
-</shape>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="100dp"
+    android:height="28dp"
+    android:viewportWidth="296"
+    android:viewportHeight="48">
+    <path
+        android:strokeWidth="2"
+        android:pathData="M4,0.5L292,0.5A3.5,3.5 0,0 1,295.5 4L295.5,44A3.5,3.5 0,0 1,292 47.5L4,47.5A3.5,3.5 0,0 1,0.5 44L0.5,4A3.5,3.5 0,0 1,4 0.5z"
+        android:fillColor="#00FFFFFF"
+        android:strokeColor="#E8E4E4"/>
+</vector>
