--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:layout_height="wrap_content">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -113,7 +119,7 @@
                     android:text="Male"
                     android:layout_toEndOf="@id/t1"
                     android:textSize="16sp"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginTop="12dp"
                     android:layout_marginStart="185dp"/>
 
                 <ImageView
@@ -152,7 +158,7 @@
                     android:text="12-12-2000"
                     android:layout_toEndOf="@id/t2"
                     android:textSize="16sp"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginTop="12dp"
                     android:layout_marginStart="130dp"/>
 
                 <ImageView
@@ -190,7 +196,7 @@
                     android:text="Derlaxy@yahoo.com"
                     android:layout_toEndOf="@id/t3"
                     android:textSize="16sp"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginTop="12dp"
                     android:layout_marginStart="85dp"/>
 
                 <ImageView
@@ -228,7 +234,7 @@
                     android:text="(307) 555-0133"
                     android:layout_toEndOf="@id/t4"
                     android:textSize="16sp"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginTop="12dp"
                     android:layout_marginStart="50dp"/>
 
                 <ImageView
@@ -266,7 +272,7 @@
                     android:text="•••••••••••••••••"
                     android:layout_toEndOf="@id/t5"
                     android:textSize="16sp"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginTop="12dp"
                     android:layout_marginStart="40dp"/>
 
                 <ImageView
@@ -292,4 +298,5 @@
 
         </LinearLayout>
     </RelativeLayout>
+    </androidx.core.widget.NestedScrollView>
 </layout>
