--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:layout_height="wrap_content">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -49,7 +55,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
-                android:layout_marginTop="10dp"
                 android:layout_marginStart="25dp">
 
                 <TextView
@@ -85,7 +90,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
-                android:layout_marginTop="20dp"
                 android:layout_marginStart="25dp">
 
                 <TextView
@@ -122,7 +126,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
-                android:layout_marginTop="20dp"
                 android:layout_marginStart="25dp">
                 <TextView
                     android:id="@+id/t4"
@@ -157,7 +160,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
-                android:layout_marginTop="20dp"
                 android:layout_marginStart="25dp">
 
                 <TextView
@@ -193,7 +195,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
-                android:layout_marginTop="20dp"
                 android:layout_marginStart="25dp">
 
                 <TextView
@@ -232,10 +233,11 @@
                 android:text="Save"
                 android:textSize="20sp"
                 android:textAllCaps="false"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginTop="30dp"/>
+                android:layout_marginStart="35dp"
+                android:layout_marginEnd="30dp"
+                android:layout_marginTop="20dp"/>
 
         </LinearLayout>
     </RelativeLayout>
+    </androidx.core.widget.NestedScrollView>
 </layout>
