--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -15,6 +15,11 @@
             <include layout="@layout/toolbar_main_home"/>
     </com.google.android.material.appbar.AppBarLayout>
 
+        <androidx.core.widget.NestedScrollView
+            android:layout_width="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            android:layout_height="wrap_content">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -96,7 +101,7 @@
 
 
                 <TextView
-                    android:id="@+id/t3"
+                    android:id="@+id/tv_Orders"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="My orders"
@@ -256,6 +261,7 @@
             </RelativeLayout>
 
         </LinearLayout>
+        </androidx.core.widget.NestedScrollView>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 
