--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -1,122 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     tools:context=".ui.main.view.fragments.CategoriesFragment">
-
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="true">
-
-
-        <com.google.android.material.appbar.AppBarLayout
-            android:id="@+id/app_bar"
+        android:background="#EFEFEF"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_margin="1dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+        <androidx.recyclerview.widget.RecyclerView
+            android:background="@color/white"
+            android:id="@+id/rv_parent"
             android:layout_width="match_parent"
+            android:layout_marginStart="4dp"
+            android:layout_marginEnd="4dp"
             android:layout_height="wrap_content"
-            android:elevation="0dp"
-            android:fitsSystemWindows="true"
-            app:elevation="0dp">
+            android:clipToPadding="true"
+            android:nestedScrollingEnabled="false" />
 
-
-            <include layout="@layout/toolbar_main_home" />
-
-
-        </com.google.android.material.appbar.AppBarLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior"
-                android:orientation="vertical">
-
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-
-                        <androidx.constraintlayout.widget.Guideline
-                            android:id="@+id/center_guideline"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:background="@color/material_on_surface_stroke"
-                            android:orientation="vertical"
-                            app:layout_constraintGuide_percent="0.3" />
-
-                        <LinearLayout
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:background="@color/material_on_surface_stroke"
-                            android:orientation="vertical"
-                            android:gravity="center"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintLeft_toLeftOf="parent"
-                            app:layout_constraintRight_toLeftOf="@+id/center_guideline"
-                            app:layout_constraintTop_toTopOf="parent">
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:text="Categories"
-                                android:textSize="12sp"
-                                android:textColor="@color/primary"
-                                android:fontFamily="@font/poppins_bold"
-                                android:padding="12dp"/>
-                            <androidx.recyclerview.widget.RecyclerView
-                                android:id="@+id/recyclerviewCategoriesHome"
-                                android:layout_gravity="center"
-                                android:background="@color/white"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:clipToPadding="true"
-                                android:nestedScrollingEnabled="false" />
-
-                        </LinearLayout>
-                        <View
-                            android:layout_width="1dp"
-                            android:layout_height="match_parent"
-                            android:background="#EFEFEF"
-                            app:layout_constraintRight_toLeftOf="@id/center_guideline"
-                            app:layout_constraintLeft_toRightOf="@id/center_guideline"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintBottom_toBottomOf="parent"/>
-                        <LinearLayout
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:background="#EFEFEF"
-                            android:orientation="vertical"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            android:layout_margin="1dp"
-                            app:layout_constraintRight_toRightOf="parent"
-                            app:layout_constraintLeft_toRightOf="@+id/center_guideline"
-                            app:layout_constraintTop_toTopOf="parent">
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:text="View all "
-                                android:fontFamily="@font/nunito_sans_extra_bold"
-                                android:textColor="@color/deep_blue"
-                                android:textSize="12sp"
-                                android:layout_margin="4dp"
-                                android:background="@color/white"
-                                android:padding="12dp"/>
-                            <androidx.recyclerview.widget.RecyclerView
-                                android:background="@color/white"
-                                android:id="@+id/recyclerviewCategoriesHomeWomen"
-                                android:layout_width="match_parent"
-                                android:layout_marginStart="4dp"
-                                android:layout_marginEnd="4dp"
-                                android:layout_height="wrap_content"
-                                android:clipToPadding="true"
-                                android:nestedScrollingEnabled="false" />
-
-                        </LinearLayout>
-
-
-                    </androidx.constraintlayout.widget.ConstraintLayout>
-
-            </LinearLayout>
-
-
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+    </LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
