--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -3,13 +3,11 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/background_color"
     tools:context=".ui.main.view.fragments.CategoriesFragment">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/background_color"
         android:fitsSystemWindows="true">
 
 
@@ -109,7 +107,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_marginStart="4dp"
                                 android:layout_marginEnd="4dp"
-                                android:layout_height="match_parent"
+                                android:layout_height="wrap_content"
                                 android:clipToPadding="true"
                                 android:nestedScrollingEnabled="false" />
 
