--- a/app/src/main/res/layout/item_view_type_one.xml
+++ b/app/src/main/res/layout/item_view_type_one.xml
@@ -1,32 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:clickable="true"
+    android:background="?android:attr/selectableItemBackground"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@drawable/border_edit_text"
-        android:layout_marginRight="@dimen/font_size_24"
-        android:layout_marginLeft="@dimen/font_size_24"
-        android:layout_marginBottom="@dimen/font_size_24"
-        android:padding="@dimen/font_size_24"
-        app:layout_constraintRight_toRightOf="parent"
-        android:orientation="vertical">
         <LinearLayout
+            android:id="@+id/Header"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:paddingTop="12sp"
+            android:paddingStart="12sp"
+            android:paddingEnd="12sp"
+            android:orientation="horizontal"
+            tools:ignore="MissingConstraints">
             <TextView
                 android:id="@+id/tv_title"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:text="title"
+                android:paddingStart="14sp"
                 android:fontFamily="@font/poppins_bold"
                 android:textColor="@color/primary"
                 android:textSize="@dimen/dimen_16"/>
@@ -36,10 +33,20 @@
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:text="View more"
+                android:background="@drawable/selector"
+                android:gravity="end"
+                android:paddingEnd="14sp"
                 android:fontFamily="@font/poppins_bold"
                 android:textColor="@color/primary"
                 android:textSize="@dimen/dimen_16"/>
         </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/Header"
+        tools:ignore="MissingConstraints">
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewProducts"
             android:layout_width="match_parent"
@@ -47,8 +54,13 @@
             android:layout_gravity="center"
             android:scrollbars="horizontal"
             android:clipToPadding="true"
-            android:nestedScrollingEnabled="false" />
+            android:nestedScrollingEnabled="false"
+            tools:ignore="MissingConstraints" />
 
     </LinearLayout>
+
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
