--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -7,8 +7,7 @@
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fitsSystemWindows="true">
+        android:layout_height="match_parent">
 
 
         <com.google.android.material.appbar.AppBarLayout
@@ -16,7 +15,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:elevation="0dp"
-            android:fitsSystemWindows="true"
             app:elevation="0dp">
 
 
@@ -39,14 +37,12 @@
                     android:id="@+id/center_guideline"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:background="@color/material_on_surface_stroke"
                     android:orientation="vertical"
                     app:layout_constraintGuide_percent="0.26" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@color/material_on_surface_stroke"
                     android:orientation="vertical"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
